force-app/main/default/objects/Form_Action__c/Form_Action__c.object-meta.xml
<CustomObject>
    <label>Form Action</label>
    <nameField>
        <displayFormat>Action-{00000}</displayFormat>
        <label>Form Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>