force-app/main/default/objects/Form_Action__c/fields/Action_Class__c.field-meta.xml
<CustomField>
    <fullName>Action_Class__c</fullName>
    <label>Action Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>