force-app/main/default/objects/Form_Action__c/fields/Action_Component__c.field-meta.xml
<CustomField>
    <fullName>Action_Component__c</fullName>
    <label>Action Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>