force-app/main/default/objects/Form_Action__c/fields/Apex_Aura_Action__c.field-meta.xml
<CustomField>
    <fullName>Apex_Aura_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apex/AuraAction</label>
    <referenceTo>Apex_Aura_Action__c</referenceTo>
    <relationshipLabel>Apex Aura Actions</relationshipLabel>
    <relationshipName>Apex_Aura_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>