force-app/main/default/objects/Form_Action__c/fields/Argument_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Argument_Mapping__c</fullName>
    <label>Argument Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>