force-app/main/default/objects/Form_Action__c/fields/Event_Name_To_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Event_Name_To_Trigger__c</fullName>
    <label>Event Name To Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>