force-app/main/default/objects/Form_Action__c/fields/Field_Action__c.field-meta.xml
<CustomField>
    <fullName>Field_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Action</label>
    <referenceTo>Form_Field__c</referenceTo>
    <relationshipLabel>Field Actions</relationshipLabel>
    <relationshipName>Field_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>