force-app/main/default/objects/Form_Action__c/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Template</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Form Actions</relationshipLabel>
    <relationshipName>Form_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>