force-app/main/default/objects/Form_Action__c/fields/Invoke_For_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoke_For_Field_Value__c</fullName>
    <label>Invoke For Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>