force-app/main/default/objects/Form_Action__c/fields/Section_Action__c.field-meta.xml
<CustomField>
    <fullName>Section_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section Action</label>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>Section Actions</relationshipLabel>
    <relationshipName>Section_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>