force-app/main/default/objects/Form_Action__c/fields/Visible_in_UI__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_UI__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Visible in UI</label>
    <type>Checkbox</type>
</CustomField>